# gismo

./: CMakeLists.txt
extensions/gsIpopt/: CMakeLists.txt
filedata/options/: ipopt.opt
